--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="main">
-      <article class="article">
+      <article id="article" class="article">
         <div>
           <p>Animating</p>
         </div>
