--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,8 @@
   </head>
   <body>
     <div class="main">
-      <article id="article" class="article">
-        <div>
-          <p>Animating</p>
-        </div>
-      </article>
-
+      <div class="emoji mb-6">💣🤯💥</div>
+      <button class="button">Boom?</button>
+    </div>
   </body>
 </html>
